# photo-triage-agent-ai-taskforce-demo-1

./: .env.dist  .gitignore  README.md  start-servers.sh
agent-server/: main.py  pyproject.toml
agent-server/api/: app.py
agent-server/api/exceptions/: handlers.py
agent-server/api/middleware/: cors.py
agent-server/api/models/: requests.py  responses.py
agent-server/api/routers/: health.py  triage.py
agent-server/config/: logging.py  settings.py
agent-server/llm/: __init__.py  services.py
agent-server/models/: __init__.py  state.py
agent-server/nodes/: __init__.py  analysis.py  classification.py  feedback.py  reflection.py
agent-server/services/: langgraph_agent.py  mcp_client.py  triage_agent.py
agent-server/utils/: exceptions.py
agent-server/workflow/: __init__.py  builder.py  conditions.py
data/templates/: feedback_templates.json  job_templates.json  quality_standards.json
demo-front-end/: README.md  angular.json  package-lock.json  package.json
demo-front-end/src/: index.html
demo-front-end/src/app/: app.component.html  app.component.scss  app.component.ts
docs/: api.md  setup.md
mcp-server/: main.py  pyproject.toml
mcp-server/core/: config.py  logging.py
mcp-server/mcp/: photo_server.py
mcp-server/resources/: base.py  feedback_templates.py  job_templates.py  quality_standards.py
mcp-server/tools/: base.py  batch_processor.py  feedback_generator.py  photo_classifier.py  quality_analyzer.py
mcp-server/utils/: exceptions.py  image_utils.py  validation.py
scripts/: run_dev.sh  run_servers.sh  setup.sh  test.sh
(+4 files in other folders)
